# helpers-system-api

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_step0_init.py  6e7cbcd17c1a_add_workspace_bot_fields.py  9f3a1b0e4c2d_replace_workspace_mini_app_url_with_name.py  a1b2c3d4e5f6_add_billing_tables.py  b7f9c3a21d4e_add_workspace_events.py  c2b7a66d9c44_add_workspace_invites.py  c4d8e1f0ab12_add_group_content_and_history.py  d91f0a6b3c2e_align_group_events_and_invoice_contracts.py  db5c339b4f78_fix_workspaces_created_by_fk_on_delete.py  e8c9d2a4b771_add_group_favorites.py  f2a1f6d7b9c3_add_groups_and_group_members.py
app/: main.py
app/core/: config.py  database.py  exceptions.py  security.py
app/middleware/: __init__.py  auth.py  workspace.py
app/models/: __init__.py  billing_payment.py  enums.py  group.py  group_document.py  group_event.py  group_event_participant.py  group_favorite.py  group_history_entry.py  group_member.py  group_stage.py  invoice.py  user.py  workspace.py  workspace_event.py  workspace_event_group.py  workspace_event_participant.py  workspace_invite.py  workspace_member.py  workspace_subscription.py
app/modules/auth/: router.py  (+2 more)
docs/backend/: api.md  architecture.md  models.md
docs/frontend/: components.md  frontend_dev_guide.md  screens.md  screens_error.md  screens_workspace.md
docs/product/: flows.md  monetization.md  overview.md  payment.md  roles.md
docs/roadmap/: mvp_plan.md  phase2.md  step0_implementation.md  users_list_implementation.md
tests/: conftest.py  test_auth.py  test_billing.py  test_groups.py  test_groups_content.py  test_invites.py  test_root.py  test_security.py  test_workspace_events.py  test_workspaces_bot_settings.py  test_workspaces_users.py
(+28 files in other folders)
